[package]
name = "hemolymph2"
version = "0.1.0"
authors = ["Katie Ampersand <katie-and@ampersandia.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-sdk = { version = "0.6.0", features = ["timing"] }
hemoglobin = {version="0.9.2"}
hemoglobin-search = {version="0.1.5"}
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
web-sys = {version="0.3.77", features=["Clipboard", "Navigator"]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
tokio = "1.45.0"
notify = "8.0.0"
notify-debouncer-mini = "0.6.0"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
debug-assertions = false
debug = false
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
